crates/ir/tests/ir/snapshots/main__ir__lower__never__never_codegen_empty_sum_user.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module never__never_codegen_empty_sum_user

type NoMessages = 
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[i4]) -> Option[i4]
import core/list/sort_by as sort_by(List[n6], (n6) -> c6) -> List[n6]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[a12]) -> List[a12]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn use_it(v0: Option[NoMessages]) -> Int =
  switch v0 {
    1 ->
      0
  }

fn main() -> Unit =
  let v2: Option[NoMessages] = construct Option::None#1()
  let v3: Int = call use_it(v2)
  let v1: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v4: Unit = call println(v1, v3)
  v4
