crates/ir/tests/ir/snapshots/main__ir__lower__never__never_codegen_fn_as_generic.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module never__never_codegen_fn_as_generic

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[i4]) -> Option[i4]
import core/list/sort_by as sort_by(List[n6], (n6) -> c6) -> List[n6]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[a12]) -> List[a12]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare panic

fn diverge(v0: String) -> Never =
  let v1: Never = call panic(v0)
  v1

fn apply(v2: (String) -> Never, v3: String) -> Never =
  let v4: Never = call_closure v2(v3)
  v4

fn main() -> Never =
  let v5: (String) -> Never = make_closure(diverge, [])
  let v6: (String) -> Never = v5
  let v7: Never = call apply(v6, "boom")
  v7
