crates/ir/tests/ir/snapshots/main__ir__lower__never__never_codegen_recur.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module never__never_codegen_recur

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[i4]) -> Option[i4]
import core/list/sort_by as sort_by(List[n6], (n6) -> c6) -> List[n6]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[a12]) -> List[a12]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare panic

fn counter(v0: Int) -> Never =
  let_join [recur] v1(v2: Int) =
    let_join v8(v5: Bool) =
      if v5 {
        let v6: Never = call panic("done")
        v6
      } else {
        let v7: Int = add_int(v2, 1)
        jump v1(v7)
      }
    in
    let v3: Dict[core/ord.Ord, Int] = get_dict core/ord.Ord[Int]
    let v4: Bool = trait_call core/ord.Ord.lt(v3, 1000, v2)
    jump v8(v4)
  in
  jump v1(v0)

fn main() -> Never =
  let v9: Never = call counter(0)
  v9
