crates/ir/tests/ir/snapshots/main__ir__lower__never__never_recur_match_mixed.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module never__never_recur_match_mixed

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[n10]) -> List[n10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
fn classify(v0: Int) -> String =
  let_join [recur] v1(v2: Int) =
    let v5: Bool = eq_int(v2, 0)
    if v5 {
      "zero"
    } else {
      let v4: Bool = eq_int(v2, 1)
      if v4 {
        "one"
      } else {
        let v3: Int = sub_int(v2, 1)
        jump v1(v3)
      }
    }
  in
  jump v1(v0)
